[package]
name = "aster_syntax"
version = "0.2.2"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A libsyntax ast builder"
repository = "https://github.com/erickt/rust-aster"

[lib]
name = "aster_syntax"
path = "../src/lib.rs"

[[test]]
name = "test"
path = "../tests/test.rs"
